--- a/TodoListClient/appSettings.template.config
+++ b/TodoListClient/appSettings.template.config
@@ -15,7 +15,7 @@
        "https://login.microsoftonline.com/organizations/" instead of "https://login.microsoftonline.com/common/"
     -->
 
-    <add key="TodoListServiceScope" value="{Enter the Application Id of your TodoListService from the app registration portal}" />
+    <add key="TodoListServiceScope" value="api://-----/access_as_user" />
     <add key="TodoListServiceBaseAddress" value="https://localhost:44321/" />
 
 </appSettings>
